<resources>
    <string name="app_name">My Assignment1</string>
    <string name="welcome_home"> Welcome home</string>
    <string name="login">Login</string>
    <string name="username">UserName</string>
    <string name="add_user">Add User</string>
    <string name="show_list">Show List</string>
    <string name="password">Password</string>
    <string name="user_id">User Id</string>
    <string name="user_id2">User Id:</string>
    <string name="user_name">User Name</string>
    <string name="user_name2">User Name</string>
    <string name="user_name12">User Name:</string>

    <string name="email">Email</string>
    <string name="email2">Email</string>
    <string name="email12">Email:</string>

    <string name="add">Add</string>
    <string name="add_user_details">Add User Details</string>
    <string name="please_enter_user_name">Please Enter Username</string>
    <string name="please_enter_valid_user_name">Please Enter Valid Username</string>
    <string name="please_enter_valid_password">Please Enter Valid Password</string>

    <string name="please_enter_user_password">Please Enter Password</string>
    <string name="please_enter_user_id">Please Enter UserID</string>
    <string name="please_enter_user_email">Please Enter User Email</string>
    <string name="entered_username_and_password_is_wrong">Entered UserName and Password is Wrong</string>
    <string name="adding_user_information_success">Adding User Information Success</string>
    <string name="please_enter_username">Please Enter Username</string>
    <string name="please_enter_valid_username">Please Enter Valid Username</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="please_enter_valid_email_id">Please Enter Valid EmailId</string>
    <string name="do_you_really_want_to_logout">Do you really want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="information_deleted">Information deleted</string>
    <string name="are_you_sure_delete_this_information">Are you sure delete this Information</string>
    <string name="user_details">UserDetails</string>


</resources>