<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/patient_view_history_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5"
        android:backgroundTint="@color/shade">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin15"
                android:layout_marginTop="@dimen/margin15"
                android:layout_marginRight="@dimen/margin15"
                android:ellipsize="end"
                android:gravity="fill"
                android:text="@string/user_id"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin15"
                android:layout_marginRight="@dimen/margin15"
                android:ellipsize="end"
                android:gravity="fill"
                android:text="@string/user_name"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin15"
                android:layout_marginRight="@dimen/margin15"
                android:ellipsize="end"
                android:gravity="fill"
                android:text="@string/email"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>


