<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin50"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/Heading">

    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height300"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/layout_margin1"
        android:layout_marginTop="@dimen/layout_margin1"
        android:layout_marginEnd="@dimen/layout_margin1"
        android:backgroundTint="@color/purple_500"
        app:cardCornerRadius="@dimen/radius1"
        app:cardElevation="@dimen/cardElevation"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height250"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin30"
            android:orientation="vertical"
            android:padding="@dimen/padding24">


            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height50"
                android:layout_marginTop="@dimen/margin15"
                android:background="@drawable/edit_text"
                android:backgroundTint="@color/white"
                android:drawablePadding="@dimen/padding"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:paddingStart="@dimen/padding2"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,TextFields">

            </EditText>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height50"
                android:layout_marginTop="@dimen/margin15"
                android:background="@drawable/edit_text"
                android:backgroundTint="@color/white"
                android:drawablePadding="@dimen/padding"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/padding2"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry">

            </EditText>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="@dimen/width300"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin80"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size"
        app:cornerRadius="@dimen/radius">

    </com.google.android.material.button.MaterialButton>


</LinearLayout>